batch8.30AM/Ingress/newsdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myvertexapp1
  template:
    metadata:
      labels:
        app: myvertexapp1
    spec:
      volumes:
      - name: shared-date-logs  # Creating a shared volume for my containers
        emptyDir: {}
      containers:
      - name: container-writing-dates # Name of first container
        image: alpine # Image to use for first container
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo 'Welcome to train service' >> /var/log/logfile; sleep 10; done"] # writing date every 10secs
        volumeMounts:
        - name: shared-date-logs
          mountPath: /var/log # Mounting log dir so app can write to it.
      - name: container-serving-dates # Name of second container
        image: nginx:1.19.0 # Image for second container
        ports:
        - containerPort: 80 # Defining what port to use.
        volumeMounts:
        - name: shared-date-logs
          mountPath: /usr/share/nginx/html # Where nginx will serve the written file

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myvertexapp2
  template:
    metadata:
      labels:
        app: myvertexapp2
    spec:
      volumes:
      - name: shared-date-logs  # Creating a shared volume for my containers
        emptyDir: {}
      containers:
      - name: container-writing-dates # Name of first container
        image: alpine # Image to use for first container
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo 'Welcome to flight service' >> /var/log/logfile; sleep 10; done"] # writing date every 10secs
        volumeMounts:
        - name: shared-date-logs
          mountPath: /var/log # Mounting log dir so app can write to it.
      - name: container-serving-dates # Name of second container
        image: nginx:1.19.0 # Image for second container
        ports:
        - containerPort: 80 # Defining what port to use.
        volumeMounts:
        - name: shared-date-logs
          mountPath: /usr/share/nginx/html # Where nginx will serve the written file
